fixed all alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,12 @@ a:focus {
   width: 100%;
 }
 
+#banner_img_center{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+
+}
 .container-ext-10 {
   max-width: 1220px;
   width: 100%;
@@ -15190,7 +15196,9 @@ img.mfp-img {
 .header-top {
   padding: 16px 0;
 }
-
+.header-logo img{
+height:70px;
+}
 .header-top-info {
   height: 30px;
   display: -webkit-box;
@@ -15225,12 +15233,12 @@ img.mfp-img {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header-logo {
-    margin: 15px 0;
+    margin: 5px 0;
   }
 }
 @media only screen and (max-width: 767px) {
   .header-logo {
-    margin: 15px 0;
+    margin: 5px 0;
   }
 }
 
@@ -16562,6 +16570,9 @@ img.mfp-img {
   position: absolute;
   left: 0;
   top: 0;
+  overflow: hidden;
+  border-radius: 10px;
+
 }
 .choose-provide .image-2 img {
   width: 100%;
@@ -17670,12 +17681,14 @@ img.mfp-img {
 }
 .single-latest-blog .latest-blog-image a img {
   width: 100%;
+  border-radius: 10px 10px 0 0;
 }
 .single-latest-blog .latest-blog-contents {
   padding: 25px 30px;
   -webkit-box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.3);
   border-radius: 0 0 10px 10px;
+  overflow: hidden;
 }
 .single-latest-blog .latest-blog-contents h4 {
   font-weight: 600;
